Adicionando script para adicionar tasks a lista com array.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
+
+    <header>
+        <h1>
+            To-Do List
+        </h1>
+    </header>
+
+    <section>
+        <input type="text">
+        <button id="task">Adicionar</button>
+        <ul id="list">
+
+        </ul>
+    </section>
     
 </body>
 </html>
+
