Adicionado a validação do input caso não tenha valor e implementado a exclusão da tarefa.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <section>
         <input type="text">
-        <button id="task">Adicionar</button>
-        <ul id="list">
+        <button id="addTask">Adicionar</button>
+        <ul>
 
         </ul>
     </section>
