Adcionando estilos ao to-do

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
 
-    <header>
-        <h1>
-            To-Do List
-        </h1>
-    </header>
-
     <section>
-        <input type="text">
-        <button id="addTask">Adicionar</button>
+        <label>
+            To-Do List
+        </label>
+        <div>
+            <input type="text" name="texto" placeholder="Escreva aqui!">
+            <button id="addTask">Adicionar</button>
+        </div>
         <ul>
-
+    
         </ul>
     </section>
     
