Add função para carregar e salvar dados no LocalStorage

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 
-    <section>
+    <form action="#">
         <label>
             To-Do List
         </label>
         <div>
-            <input type="text" name="texto" placeholder="Escreva aqui!">
+            <input type="text" name="texto" placeholder="Digite neste campo.">
             <button id="addTask">Adicionar</button>
         </div>
         <ul>
     
         </ul>
-    </section>
+    </form>
     
 </body>
 </html>
