Alterando cores e removendo bordas para nova proposta de estilo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </label>
         <div>
             <input type="text" name="texto" placeholder="Digite neste campo.">
-            <button id="addTask">Adicionar</button>
+            <button id="addTask">+</button>
         </div>
         <ul>
     
