--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/todolist.webp" type="image/x-icon">
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
             To-Do List
         </h1>
         <div>
-            <input type="text" name="texto" placeholder="Digite neste campo.">
+            <input type="text" name="text" placeholder="Digite neste campo.">
             <button id="addTask">+</button>
         </div>
         <ul>
