Foi retirado width do h1 e aumentando margin da div

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             To-Do List
         </h1>
         <div>
-            <input type="text" name="text" placeholder="Digite neste campo.">
-            <button id="addTask">+</button>
+            <input type="text" name="writeTask" placeholder="Digite neste campo.">
+            <button id="addTask" name="addTask">+</button>
         </div>
         <ul>
     
