Foi adcionado limite de tarefas, retirado refresh pelo form, ajustado fundo e posição do form no topo da pagina.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-    <form action="#">
+    <form id="form">
         <h1>
             To-Do List
         </h1>
         <div>
-            <input type="text" name="writeTask" placeholder="Digite neste campo.">
+            <input type="text" name="writeTask" maxlength="30" placeholder="Digite neste campo.">
             <button id="addTask" name="addTask">+</button>
         </div>
         <ul>
