trocado favicon e adicionado imagem ao lado esquerdo do h1

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="imgs/todolist.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="imgs/check.ico" type="image/x-icon">
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
     
     <form id="form">
         <h1>
-            To-Do List
+            <img src="imgs/check.png" alt="Todo List Icon"> To-Do List
         </h1>
         <div>
             <input type="text" name="writeTask" maxlength="30" placeholder="Digite neste campo.">
