--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <img src="imgs/check.png" alt="Todo List Icon"> To-Do List
         </h1>
         <div>
-            <input type="text" name="writeTask" maxlength="30" placeholder="Digite neste campo.">
+            <input type="text" name="writeTask" maxlength="20" placeholder="Digite neste campo.">
             <button id="addTask" name="addTask">+</button>
+            <button id="deleteALL" name="deleteAll">All</button>
         </div>
         <ul>
     
